--- a/WorkoutTimer/Base.lproj/Main.storyboard
+++ b/WorkoutTimer/Base.lproj/Main.storyboard
@@ -41,33 +41,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nkh-tL-cwp">
-                                <rect key="frame" x="0.0" y="136" width="375" height="48"/>
-                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="oiZ-im-nRN"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="wbr-PQ-Mqz">
-                                    <size key="itemSize" width="48" height="48"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell1" id="FD4-O1-0BG">
-                                        <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Jnj-1i-ODi"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="des-7C-XwL"/>
-                                </connections>
-                            </collectionView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="3nI-nB-5oa">
                                 <rect key="frame" x="0.0" y="196" width="375" height="11"/>
                                 <constraints>
@@ -217,12 +190,6 @@
                                     <constraint firstAttribute="height" constant="90" id="m4q-4e-ck4"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sets" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RWl-t6-qp6">
-                                <rect key="frame" x="0.0" y="95.5" width="375" height="28.5"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="24"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Cy1-8v-PYR" userLabel="Workout Total Stack">
                                 <rect key="frame" x="20" y="74" width="111" height="21.5"/>
                                 <subviews>
@@ -263,21 +230,73 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0y-ug-7KD" userLabel="Sets View">
+                                <rect key="frame" x="0.0" y="95.5" width="375" height="88.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sets" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RWl-t6-qp6">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="28.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28.5" id="EJv-fg-HrS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nkh-tL-cwp">
+                                        <rect key="frame" x="0.0" y="40.5" width="375" height="48"/>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="oiZ-im-nRN"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="wbr-PQ-Mqz">
+                                            <size key="itemSize" width="48" height="48"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell1" id="FD4-O1-0BG">
+                                                <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </view>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="Jnj-1i-ODi"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="des-7C-XwL"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="nkh-tL-cwp" secondAttribute="bottom" id="9GP-v6-vRX"/>
+                                    <constraint firstItem="nkh-tL-cwp" firstAttribute="top" secondItem="RWl-t6-qp6" secondAttribute="bottom" constant="12" id="Dkq-hb-EXM"/>
+                                    <constraint firstAttribute="trailing" secondItem="RWl-t6-qp6" secondAttribute="trailing" id="Sfg-14-5bB"/>
+                                    <constraint firstItem="nkh-tL-cwp" firstAttribute="leading" secondItem="q0y-ug-7KD" secondAttribute="leading" id="WNv-Fe-CEH"/>
+                                    <constraint firstItem="RWl-t6-qp6" firstAttribute="leading" secondItem="q0y-ug-7KD" secondAttribute="leading" id="XhW-Zr-30H"/>
+                                    <constraint firstItem="RWl-t6-qp6" firstAttribute="top" secondItem="q0y-ug-7KD" secondAttribute="top" id="sFd-lB-OYo"/>
+                                    <constraint firstAttribute="trailing" secondItem="nkh-tL-cwp" secondAttribute="trailing" id="xCo-dY-4D5"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.2733489871" green="0.42662027479999998" blue="0.4372464418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Cy1-8v-PYR" firstAttribute="top" secondItem="J3b-HB-qcu" secondAttribute="bottom" constant="10" id="0ol-Kx-JHt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mOB-Q6-5jh" secondAttribute="trailing" constant="20" id="3db-qs-xBu"/>
                             <constraint firstItem="J3b-HB-qcu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4Jx-df-vBA"/>
-                            <constraint firstItem="RWl-t6-qp6" firstAttribute="top" secondItem="Cy1-8v-PYR" secondAttribute="bottom" id="4bw-ME-TyU"/>
                             <constraint firstItem="8cv-wa-K71" firstAttribute="top" secondItem="J3b-HB-qcu" secondAttribute="bottom" constant="10" id="5dT-4P-JMD"/>
-                            <constraint firstItem="nkh-tL-cwp" firstAttribute="top" secondItem="RWl-t6-qp6" secondAttribute="bottom" constant="12" id="8HO-Ky-lIE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q0y-ug-7KD" secondAttribute="trailing" id="8Fj-YV-02Q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d6J-5j-EFY" secondAttribute="trailing" id="9qy-A4-ILN"/>
                             <constraint firstItem="0yQ-b3-yOz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Bqu-R1-OR7"/>
+                            <constraint firstItem="3nI-nB-5oa" firstAttribute="top" secondItem="q0y-ug-7KD" secondAttribute="bottom" constant="12" id="FBU-Cy-a7D"/>
                             <constraint firstItem="3nI-nB-5oa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GIe-xu-ZQ9"/>
+                            <constraint firstItem="q0y-ug-7KD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GqZ-6F-JmH"/>
                             <constraint firstItem="J3b-HB-qcu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Huk-kn-s18"/>
                             <constraint firstItem="J3b-HB-qcu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kma-Y6-hsX"/>
                             <constraint firstItem="jFa-JG-9TB" firstAttribute="top" secondItem="d6J-5j-EFY" secondAttribute="bottom" constant="20" id="MHa-35-XMf"/>
+                            <constraint firstItem="q0y-ug-7KD" firstAttribute="top" secondItem="Cy1-8v-PYR" secondAttribute="bottom" id="OYc-Eg-RYm"/>
                             <constraint firstItem="d6J-5j-EFY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QCa-Gn-ZI1"/>
                             <constraint firstItem="0yQ-b3-yOz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="UTh-SQ-WA4"/>
                             <constraint firstItem="d6J-5j-EFY" firstAttribute="top" secondItem="3nI-nB-5oa" secondAttribute="bottom" constant="12" id="UkI-AC-KDb"/>
@@ -285,17 +304,12 @@
                             <constraint firstAttribute="trailing" secondItem="3nI-nB-5oa" secondAttribute="trailing" id="btx-T6-ZRh"/>
                             <constraint firstItem="0yQ-b3-yOz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cEP-C3-Hf2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jFa-JG-9TB" secondAttribute="trailing" id="dfu-0n-NLN"/>
-                            <constraint firstItem="3nI-nB-5oa" firstAttribute="top" secondItem="nkh-tL-cwp" secondAttribute="bottom" constant="12" id="gBq-63-RSR"/>
                             <constraint firstItem="jFa-JG-9TB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gq3-fi-106"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mOB-Q6-5jh" secondAttribute="bottom" constant="20" id="hb4-Aj-PYm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nkh-tL-cwp" secondAttribute="trailing" id="ita-j4-4mh"/>
                             <constraint firstItem="Cy1-8v-PYR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ktS-K2-Dom"/>
                             <constraint firstItem="0yQ-b3-yOz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lK1-67-QOy"/>
-                            <constraint firstItem="RWl-t6-qp6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oFL-vW-HaT"/>
                             <constraint firstItem="mOB-Q6-5jh" firstAttribute="top" secondItem="jFa-JG-9TB" secondAttribute="bottom" constant="20" id="ouQ-ko-Uer"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RWl-t6-qp6" secondAttribute="trailing" id="pAH-ns-ATZ"/>
                             <constraint firstItem="mOB-Q6-5jh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="prV-l8-Xk2"/>
-                            <constraint firstItem="nkh-tL-cwp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qXS-md-xFr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -309,6 +323,7 @@
                         <outlet property="restTitle" destination="lqg-aZ-vSO" id="kxS-UC-OX8"/>
                         <outlet property="restView" destination="Aii-OY-C40" id="kJS-Rl-i4i"/>
                         <outlet property="setCollectionView" destination="nkh-tL-cwp" id="n8g-pe-h8c"/>
+                        <outlet property="setsView" destination="q0y-ug-7KD" id="mp6-cW-lK7"/>
                         <outlet property="startButtonOutlet" destination="Ehb-Ou-OCd" id="L2k-yJ-X1G"/>
                         <outlet property="stopButtonOutlet" destination="T40-rm-wOF" id="pdk-2e-CXC"/>
                         <outlet property="timerProgress" destination="3nI-nB-5oa" id="ryh-GE-JCk"/>
