Some UI work and functionality added.

--- a/WorkoutTimer/Cells/ExerciseCollectionViewCell.xib
+++ b/WorkoutTimer/Cells/ExerciseCollectionViewCell.xib
@@ -12,31 +12,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="exerciseCell" id="gTV-IL-0wX" customClass="ExerciseCollectionViewCell" customModule="FIT" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="48"/>
+            <rect key="frame" x="0.0" y="0.0" width="240" height="36"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="240" height="48"/>
+                <rect key="frame" x="0.0" y="0.0" width="240" height="36"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8F-5k-r9e" userLabel="Exercise Cell View">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="48"/>
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="36"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="NMZ-qJ-A4o" userLabel="Exercise Cell Stack View">
-                                <rect key="frame" x="12" y="0.0" width="216" height="48"/>
+                                <rect key="frame" x="12" y="0.0" width="216" height="36"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Abs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxv-AN-d9k">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="48"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="36"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="33 Reps" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTB-KP-BSV">
-                                        <rect key="frame" x="120" y="0.0" width="96" height="48"/>
+                                        <rect key="frame" x="120" y="0.0" width="96" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="96" id="Xr1-tY-Wdx"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="96" id="eZy-lg-eSI"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
